# geotech_platform

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
app/: streamlit_app.py
docs/: Data_Extraction_Workflow.docx  data_extraction_workflow.mermaid
engine/: boundaries.py  build.py  config.py  geo_utils.py  i18n.py  inference.py  io_utils.py  map_config.py  pdf_assets.py  pdf_text.py  query.py  shapefile_io.py
reference/: engineering_risk_dictionary.yaml  geology_to_geotech_rules.yaml  geotech_ontology.yaml  i18n_ja.yaml  lithology_dictionary_ja_en.csv  manual_review_guidelines.md  region_boundaries.yaml
reference/knowledge/: L1_geology_terms.csv  L2_geology_to_geotech.csv  L3_property_ranges.yaml  L4_recommendations.yaml  pdf_curated_labels.csv  sources.yaml
src/geotech_platform/: __init__.py  cli.py  cli_test.py
src/geotech_platform/app/: streamlit_app.py
src/geotech_platform/engine/: __init__.py  boundaries.py  build.py  config.py  gpkg_writer.py  i18n.py  inference.py  io_utils.py  map_config.py  pdf_assets.py  query.py
